@@ -1,3 +1,9 @@
+2000-08-28  JP Rosevear  <jpr@helixcode.com>
+
+	* gui/event-editor.c (dialog_to_comp_object): Initiliaze tzid to
+	null, only set recurrence rules and exception dates if there
+	are any
+
 2000-08-27  JP Rosevear  <jpr@helixcode.com>
 
 	* pcs/cal-backend-file.c (save): Write out the calendar object
